@@ -1,10 +1,13 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin canvas::sqmap n 0.3]
+[manpage_begin canvas::sqmap n 0.3.1]
 [moddesc   {Variations on a canvas}]
 [titledesc {Canvas with map background based on square tiles}]
 [require Tcl 8.4]
 [require Tk 8.4]
-[require canvas::sqmap [opt 0.3]]
+[require snit]
+[require uevent::onidle]
+[require cache::async]
+[require canvas::sqmap [opt 0.3.1]]
 [description]
 
 This package provides an extended canvas widget for the display of
