@@ -1,10 +1,12 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin canvas::zoom n 0.2]
+[manpage_begin canvas::zoom n 0.2.1]
 [moddesc   {Variations on a canvas}]
 [titledesc {Zoom control for canvas::sqmap}]
 [require Tcl 8.4]
 [require Tk 8.4]
-[require canvas::zoom [opt 0.2]]
+[require snit]
+[require uevent::onidle]
+[require canvas::zoom [opt 0.2.1]]
 [description]
 
 This package provides a widget to enable the user of a map display to
