@@ -1,3 +1,11 @@
+2010-08-13  Andreas Kupries  <andreask@activestate.com>
+
+	* canvas_zoom.tcl: Added missing Tk requirement. Bumped version to
+	* canvas_zoom.man: 0.2.1. Updated documentation.
+	* canvas_sqmap.tcl: Added missing Tk requirement. Bumped version to
+	* canvas_sqmap.man: 0.3.1. Updated documentation.
+	* pkgIndex.tcl:
+
 2010-07-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* canvas_sqmap.tcl: Extend the class with two option to specify
